@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>app.owlcms</groupId>
 		<artifactId>owlcms4top</artifactId>
-		<version>4.0.7</version>
+		<version>4.0.8-SNAPSHOT</version>
 	</parent>
 
 	<name>Olympic Weightlifting Competition Management System</name>
@@ -342,6 +342,67 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>com.akathist.maven.plugins.launch4j</groupId>
+				<artifactId>launch4j-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>l4j</id>
+						<phase>package</phase>
+						<goals>
+							<goal>launch4j</goal>
+						</goals>
+						<configuration>
+							<headerType>console</headerType>
+							<outfile>${project.build.directory}/${project.artifactId}.exe</outfile>
+							<jar>${project.artifactId}-${project.version}.jar</jar>
+							<dontWrapJar>true</dontWrapJar>
+							<errTitle>owlcms</errTitle>
+							<classPath>
+								<mainClass>app.owlcms.Main</mainClass>
+								<addDependencies>false</addDependencies>
+								<postCp>${project.artifactId}-${project.version}.jar</postCp>
+							</classPath>
+							<icon>src/main/resources/META-INF/resources/frontend/images/owlcms.ico</icon>
+							<jre>
+								<minVersion>1.8.0</minVersion>
+<!-- 								<opts> -->
+<!-- 									<opt>-Djava.endorsed.dirs=./endorsed</opt> -->
+<!-- 								</opts> -->
+							</jre>
+							<versionInfo>
+								<fileVersion>1.0.0.0</fileVersion>
+								<txtFileVersion>${project.version}</txtFileVersion>
+								<fileDescription>${project.name}</fileDescription>
+								<copyright>...</copyright>
+								<productVersion>1.0.0.0</productVersion>
+								<txtProductVersion>1.0.0.0</txtProductVersion>
+								<productName>${project.name}</productName>
+								<companyName>...</companyName>
+								<internalName>...</internalName>
+								<originalFilename>${executable.name}.exe</originalFilename>
+							</versionInfo>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/assembly/zip.xml</descriptor>
+							</descriptors>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>			
 			<plugin>
 				<groupId>com.heroku.sdk</groupId>
 				<artifactId>heroku-maven-plugin</artifactId>
